--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -10,7 +10,7 @@ body{
 
 .container{
     width: 100vw;
-    height: 100vw;
+    height: 90vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap : 7;
