--- a/templates/login.html
+++ b/templates/login.html
@@ -1,15 +1,8 @@
+{% extends 'base.html' %}
 {% load static %}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://fonts.googleapis.com/css?family=Poppins:600&display=swap" rel="stylesheet"> 
+{% block content %}
     <link rel="stylesheet" type="text/css" href="{%static 'css/login.css' %}">
-    <title>Login</title>
-</head>
-<body>
     <div class="container">
         <div class="img">
             <img src="{% static 'img/tasting.svg' %}">
@@ -42,5 +35,5 @@
         </div>
     </div>
     <script type="text/javascript" src="{% static 'js/login.js' %}"></script>
-</body>
-</html>
+
+{% endblock content %}
