--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                     </li>
                 </div>
                 <div class='nav--right'>
-                    <a href="#" value='Sign up' class='login'>Sign up</a>
+                    <a href="{% url 'register' %}" value='Sign up' class='login'>Sign up</a>
                     <a href="{% url 'login' %}" value='Login' class='login'>Login</a>
                 </div>
             </div>
