--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
             <img src="{% static 'img/tasting.svg' %}">
         </div>
         <div class="login-container">
-            <form action='login.html'>
+            <form action='login'>
                 <img class = "avatar" src="{% static 'img/profile.svg' %}">
                 <h2>Welcome</h2>
                 <div class="input-div one focus">
