--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,6 +1,6 @@
 *{
-    margin:0px;
-    padding:0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 html,
@@ -9,13 +9,14 @@ body{
     width:100%;
     overflow-x:hidden;
     background-size: cover;
-    color:black;
+    color:green;
 }
 
 a{
     text-decoration: none;
     cursor: pointer;
     color:black;
+    transition: .3%;
 }
 
 /* Navigation Bar */
@@ -23,6 +24,8 @@ a{
     position:fixed;
     width:100%;
     height:70px;
+    background:white;
+    z-index:5;
 }
 .navbar--head{
     display:block;
@@ -38,7 +41,6 @@ a{
     float: left;
 }
 .text{
-    /*! padding: 4px; */
     margin: 0px 10px;
     color: green;
     font-size: 44px;
@@ -58,14 +60,14 @@ a{
     font-size: 18px;
 }
 .searchbtn{
-    background: orangered;
+    background: green;
     font-size: 20px;
     padding: 2px 10px;
     color:white;
     border: 1px solid black;
 }
 .searchbtn:hover{
-    background: green;
+    background: orangered;
 }
 .nav--right{
     display:block;
@@ -105,8 +107,7 @@ a{
 
 .topnav{
     display:block;
-    position:relative;
-    background-color:#fdfafa;
+    background: #fdfdfd;
     padding: 0px 50px;
     box-shadow: 0px 3px 5px #dddddd;
     float: left;
@@ -212,7 +213,7 @@ a{
     }
     .links{
         height:70px;
-        font-size:20px;
+        font-size:15px;
         list-style: none;
         float: left;
         width:80%;
@@ -224,6 +225,9 @@ a{
         height:100px;
         float: left;
     }
+    .links>li>a>span{
+        display: block;
+    }
     .nav--right{
         display:block;
         float:right;
@@ -232,17 +236,20 @@ a{
         margin:0px;
     }
     .login{
-        float:none;
         font-size:15px;
         width:90%;
         padding:5px;
         margin: 5px;
     }
 /*     .signup{
-        float:none;
         font-size:15px;
         width:90%;
         padding:5px;
         margin: 5px;
     } */
+}
+.content{
+    position: absolute;
+    top:110px;
+    width:100%;
 }
