--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,6 +1,6 @@
 *{
-    margin:0px;
-    padding:0;
+    margin: 0px;
+    padding: 0px;
     box-sizing: border-box;
 }
 html,
@@ -9,13 +9,15 @@ body{
     width:100%;
     overflow-x:hidden;
     background-size: cover;
-    color:black;
+    color:green;
+    font-family: 'Poppins', sans-serif;
 }
 
 a{
     text-decoration: none;
     cursor: pointer;
     color:black;
+    transition: .3%;
 }
 
 /* Navigation Bar */
@@ -23,6 +25,8 @@ a{
     position:fixed;
     width:100%;
     height:70px;
+    background:white;
+    z-index:5;
 }
 .navbar--head{
     display:block;
@@ -38,7 +42,6 @@ a{
     float: left;
 }
 .text{
-    /*! padding: 4px; */
     margin: 0px 10px;
     color: green;
     font-size: 44px;
@@ -58,14 +61,14 @@ a{
     font-size: 18px;
 }
 .searchbtn{
-    background: orangered;
+    background: green;
     font-size: 20px;
     padding: 2px 10px;
     color:white;
     border: 1px solid black;
 }
 .searchbtn:hover{
-    background: green;
+    background: orangered;
 }
 .nav--right{
     display:block;
@@ -105,8 +108,7 @@ a{
 
 .topnav{
     display:block;
-    position:relative;
-    background-color:#fdfafa;
+    background: #fdfdfd;
     padding: 0px 50px;
     box-shadow: 0px 3px 5px #dddddd;
     float: left;
@@ -246,4 +248,9 @@ a{
         padding:5px;
         margin: 5px;
     } */
+}
+.content{
+    position: absolute;
+    top:110px;
+    width:100%;
 }
