--- a/static/css/login.css
+++ b/static/css/login.css
@@ -9,8 +9,8 @@ body{
 }
 
 .container{
-    width: 100vw;
-    height: 90vh;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap : 7;
@@ -18,8 +18,8 @@ body{
 }
 
 .img{
-    /* display: flex; */
-    margin-top: 150px;
+    margin-top: 50px;
+    margin-left: 100px;
     justify-content: flex-end;
     align-items: center;
 }
@@ -36,9 +36,16 @@ body{
 
 form{
     width: 360px;
-    margin: 150px;
+    margin: 50px 150px;
 }
-
+.forgot{
+    padding:10px;
+}
+.forgot a{
+    text-decoration: underline;
+    color:rgb(1, 111, 255);
+    padding:10px;
+}
 .avatar{
     width: 100px;
 }
@@ -91,11 +98,11 @@ form h2{
 }
 
 .input-div.one{
-    margin-top: 0;
+    margin-top: 30px;
 }
 
 .input-div.two{
-    margin-bottom: 4px;
+    margin-bottom: 25px;
 }
 
 .i{
@@ -150,21 +157,6 @@ form h2{
     color: #555;
     font-family: 'Poppins',sans-serif;
 }
-
-
-a{
-    display: block;
-    text-align: right;
-    text-decoration: none;
-    color: #999;
-    font: 0.9rem;
-    transition: .3%;
-}
-
-a:hover{
-    color: #38d39f;
-}
-
 
 .btn{
     display: block;
