--- a/static/css/register.css
+++ b/static/css/register.css
@@ -9,8 +9,8 @@ body{
 }
 
 .container{
-    width: 100vw;
-    height: 90vh;
+    width: 100%;
+    height: 100%;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap : 7;
@@ -19,7 +19,8 @@ body{
 
 .img{
     /* display: flex; */
-    margin-top: 150px;
+    margin-top:100px;
+    margin-left:100px;
     justify-content: flex-end;
     align-items: center;
 }
@@ -30,13 +31,15 @@ body{
 
 .reg-container{
     /* display: flex; */
+    height:80vh;
     align-items: center;
     text-align: center;
+    overflow-y: scroll;
 }
 
 form{
     width: 360px;
-    margin: 150px;
+    margin: 50px 150px;
 }
 
 .avatar{
