--- a/templates/login.html
+++ b/templates/login.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-
-{% block content %}
+{% block css %}
     <link rel="stylesheet" type="text/css" href="{%static 'css/login.css' %}">
+{% endblock css %}
+{% block content %}
     <div class="container">
         <div class="img">
             <img src="{% static 'img/tasting.svg' %}">
@@ -29,7 +30,9 @@
                         <input type="password" class="input">
                     </div>
                 </div>
-                <a href="#">Forgot Password</a>
+                <div class="forgot">
+                    <a href="#">Forgot Password?</a>
+                </div>
                 <input type="submit" class="btn" value="LOGIN">
             </form>
         </div>
