--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% load static %}
-
+{% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/register.css' %}">
+{% endblock css %}
 {% block content %}
-    <link rel="stylesheet" type="text/css" href="{%static 'css/register.css' %}">
     <div class="container">
         <div class="img">
             <img src="{% static 'img/reg-1.svg' %}">
