Frontend UI Updated

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,256 +1,232 @@
-*{
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
-}
-html,
-body{
-    height:100%;
-    width:100%;
-    overflow-x:hidden;
-    background-size: cover;
-    color:green;
-    font-family: 'Poppins', sans-serif;
+* {
+    margin: 0;
+    padding: 0;
 }
 
-a{
+a {
     text-decoration: none;
-    cursor: pointer;
-    color:black;
-    transition: .3%;
 }
 
-/* Navigation Bar */
-.navbar{
-    position:fixed;
-    width:100%;
-    height:70px;
-    background:white;
-    z-index:5;
+body {
+    font-family: Poppins;
 }
-.navbar--head{
-    display:block;
-    width:100%;
-    height:70px;
-    font-size: 35px;
-    font-weight:600;
-    padding: 10px 20px;
-    align-content: center;
+
+.hero {
+    background-image: linear-gradient(190deg, rgba(43, 40, 40, 0.43), rgba(22, 21, 21, 0.68)), url(../img/hero/dinner.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 570px;
 }
-.heading{
-    height:50px;
-    float: left;
+
+.hero-container {
+    display: grid;
 }
-.text{
-    margin: 0px 10px;
-    color: green;
-    font-size: 44px;
+
+#header-top {
+    margin-top: 10px;
 }
-.searchbar{
-    height:50px;
-    width:450px;
-    padding: 3px 25px;
+
+.navbar-desktop {
     display: grid;
     grid-auto-flow: column;
-    float: right;
-    margin-right: 60px;
+    grid-template-columns: 10% 1fr 230px;
 }
-.search{
-    width: 400px;
-    padding: 10px 15px;
-    font-size: 18px;
+
+.navbar-desktop .logo {
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-columns: 100px 200px;
+    justify-content: center;
+    align-items: center;
+    grid-gap: 10px;
 }
-.searchbtn{
-    background: green;
-    font-size: 20px;
-    padding: 2px 10px;
-    color:white;
-    border: 1px solid black;
+
+.logo>img {
+    width: 100%;
+    border-radius: 50%;
 }
-.searchbtn:hover{
-    background: orangered;
-}
-.nav--right{
-    display:block;
-    float:right;
-    margin: 0px 3px;
-}
-.login{
-    float:right;
-    text-align:center;
-    font-size:20px;
-    width:120px;
-    padding:5px 20px;
-    border: 0px;
-    border-radius: 12px 0px;
-    background: green;
+
+.brand-name {
+    font-size: 52px;
     color: white;
-    margin: 5px;
-    cursor: pointer;
-}
-.login:hover{
-    background: orangered;
-    color:white;
+    text-shadow: 3px 3px #2d29292b;
 }
 
-/* .signup{
-    float: right;
-    font-size:20px;
-    width:120px;
-    padding:5px 20px;
-    border:0px;
-    border-radius: 12px 0px;
-    background: green;
-    color:white;
-    margin:5px;
-    cursor: pointer;
-} */
+.navbar-desktop .left .link {
+    list-style-type: none;
+    display: grid;
+    grid-auto-flow: column;
+    align-items: center;
+}
 
-.topnav{
-    display:block;
-    background: #fdfdfd;
-    padding: 0px 50px;
-    box-shadow: 0px 3px 5px #dddddd;
-    float: left;
+.navbar-desktop .left {
+    display: grid;
+    align-items: center;
+    margin-right: 10px;
+}
+
+.link li {
+    justify-self: center;
+}
+
+li a {
+    color: white;
+    font-size: 20px;
+}
+
+.left .link .signup {
+    background-color: white;
+    border-radius: 50px;
+    padding: 8px 16px;
+}
+
+.signup a {
+    color: rgb(73, 73, 73) !important;
+}
+
+.link .signup:hover {
+    background-color: rgb(247, 247, 247);
+}
+
+/* -------- hero text -------------*/
+
+.hero-text {
+    text-align: center;
+    font-size: 30px;
+    margin-top: 80px;
+    color: rgb(255, 255, 255);
+    text-shadow: 3px 2px 6px #00000075;
+}
+
+.go {
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+}
+
+.btn {
+    padding: 8px 20px;
+    background: rgb(37, 198, 75);
+    border-radius: 2px;
+    transition: all .2s ease;
+}
+
+.btn:hover {
+    background: rgb(25, 156, 56);
+}
+
+span.btn-text {
+    font-size: 22px;
+    color: rgb(255, 255, 255);
+}
+
+span.arrow {
+    position: relative;
+    top: 5px;
+    right: 1px;
+    display: inline-block;
+    transform: translateX(0);
+    transition: transform .4s ease-out;
+}
+
+.btn:hover .arrow {
+    transform: translateX(5px);
+}
+
+/* --- main content ---*/
+
+.how {
+    display: grid;
+    grid-auto-flow: column;
+    grid-gap: 40px;
+    margin: 60px 60px 0 60px;
+}
+
+.card {
+    display: grid;
+    grid-template-rows: 300px auto;
+    width: 350px;
+    text-align: center;
+}
+
+.card span {
+    padding: 12px 12px;
+}
+
+.card span h2 {
+    color: #262121;
+    font-size: 30px;
+}
+
+.card span p {
+    color: #616668;
+    font-size: 15px;
+    font-weight: lighter;
+    line-height: 24px;
+}
+
+.card>img {
     width: 100%;
 }
-.links{
-    height:40px;
-    overflow: hidden;
-    font-size:20px;
-    list-style: none;
-    display: block;
-    float: left;
-}
-.links>li{
-    display:block;
-    padding:5px;
-    width:150px;
-    text-align: center;
-    color: green;
-    float: left;
-}
-.links>li>a{
-    color: inherit;
-}
-.icons{
-    width:25px;
-    height:25px;
-}
-.icons-h{
-    width:25px;
-    height:25px;
-    display: none;
-}
-.links>li:hover{
-    background-color: green;
-    color: white;
-}
-.links>li:hover .icons{
-    display: none;
-}
-.links>li:hover .icons-h{
-    display: initial;
-}
-.icon{
-    width: 25px;
-    height: 25px;
-    cursor: pointer;
-    z-index: 10;
-}
-.icon i {
-    display: block;
-    width: 20px;
-    height: 2px;
-    background: #ffffff;
-    border-radius: 2px;
-    margin-top: 4px;
+
+.about {
+    background-color: #eee;
 }
 
-
-/* For Mobile */
-@media screen and (max-width:1024px){
-    .navbar{
-        height:70x;
-        box-shadow: 0px 3px 3px #dddddd;
-    }
-    .navbar--head{
-        padding:10px;
-    }
-    .heading{
-        height: 50px;
-        float: left;
-    }
-    .text{
-        margin: 0px;
-        font-size: 35px;
-    }
-    .searchbar{
-        height: 40px;
-        width: 165px;
-        padding: 5px;
-        margin-right: 5px;
-    }
-    .search{
-        display: block;
-        width:120px;
-        font-size: 15px;
-    }
-    .searchbtn{
-        background-color: orangered;
-        font-size: 20px;
-        padding: 0px 10px;
-        color:white;
-        border: 1px solid black;
-    }
-    .topnav{
-        display:block;
-        position:fixed;
-        bottom:0;
-        padding:0px;
-        float: left;
-        width: 100%;
-        box-shadow: 0px -3px 5px #dddddd;
-    }
-    .links{
-        height:70px;
-        font-size:15px;
-        list-style: none;
-        float: left;
-        width:80%;
-    }
-    .links>li{
-        display:block;
-        padding:5px;
-        width:25%;
-        height:100px;
-        float: left;
-    }
-    .links>li>a>span{
-        display: block;
-    }
-    .nav--right{
-        display:block;
-        float:right;
-        height:70px;
-        width:20%;
-        margin:0px;
-    }
-    .login{
-        font-size:15px;
-        width:90%;
-        padding:5px;
-        margin: 5px;
-    }
-/*     .signup{
-        font-size:15px;
-        width:90%;
-        padding:5px;
-        margin: 5px;
-    } */
+footer {
+    background-color: rgb(25, 25, 25);
+    color: rgb(255, 255, 255);
+    font-weight: lighter;
 }
-.content{
-    position: absolute;
-    top:110px;
-    width:100%;
+
+.wrapper.footer {
+    margin-top: 0;
+}
+
+.wrapper {
+    display: grid;
+    grid-auto-flow: column;
+    /* grid-template-columns: 50% 50%; */
+    align-items: center;
+    /* margin: 4em 3em 0 3em; */
+    padding: 24px 24px;
+}
+
+@media only screen and (max-width: 768px) {
+    .navbar-desktop .logo {
+        grid-template-columns: 71px 200px !important;
+    }
+
+    .navbar-desktop .left {
+        margin-right: 0;
+        margin-left: 8px;
+    }
+
+    .navbar-desktop {
+        grid-auto-flow: row;
+        grid-template-columns: none !important;
+    }
+
+    .navbar-desktop .left {
+        margin-top: 15px;
+    }
+
+    .hero-text {
+        margin-top: 15px;
+    }
+
+    .hero-text h1 {
+        line-height: 67px;
+    }
+
+    .how {
+        grid-auto-flow: row;
+        margin: 0 0 60px 0;
+        justify-content: center;
+    }
+
+    .wrapper {
+        grid-auto-flow: row;
+    }
 }
