--- a/static/css/register.css
+++ b/static/css/register.css
@@ -9,8 +9,8 @@ body{
 }
 
 .container{
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 90vh;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-gap : 7;
@@ -19,8 +19,7 @@ body{
 
 .img{
     /* display: flex; */
-    margin-top:100px;
-    margin-left:100px;
+    margin-top: 150px;
     justify-content: flex-end;
     align-items: center;
 }
@@ -31,15 +30,13 @@ body{
 
 .reg-container{
     /* display: flex; */
-    height:80vh;
     align-items: center;
     text-align: center;
-    overflow-y: scroll;
 }
 
 form{
     width: 360px;
-    margin: 50px 150px;
+    margin: 150px;
 }
 
 .avatar{
