--- a/templates/register.html
+++ b/templates/register.html
@@ -30,6 +30,13 @@
                         <input type="text" class="input">
                     </div>
                     <div>
+                        <h5>Address</h5>
+                        <input type="text" class="input">
+                    </div>
+                    <div>
+                        <h5>Location</h5>
+                        <input type="text" class="input">
+                    </div>
                         <h5>Stay</h5>
                         <input type="text" class="input">
                     </div>
